--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -13,7 +13,7 @@
     <Grid MinHeight="1400" Margin="0,0,10,10" Background="CadetBlue" >
 
         <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2" Background="CadetBlue" BorderThickness="0">
-         
+
 
             <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
@@ -53,7 +53,7 @@
                         </StackPanel>
 
                         <Button Grid.Row="7" Grid.Column="1"
-                                 HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="ScanIDCard" Padding="0 0" Height="35" Width="125" Margin="20,5,0,0" Click="ScanIDCard_Click" >
+                                 HorizontalAlignment="Left" x:Name="ScanIDCard" Padding="0 0" Width="125" Margin="20,5,0,0" Click="ScanIDCard_Click" Height="35" VerticalAlignment="Top" >
                             Scan Front
                         </Button>
 
@@ -108,7 +108,7 @@
 
                 <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676" Background="CadetBlue" BorderThickness="0" >
 
-                  
+
                     <TabItem Name="ConsultantApplicationForm" Width="250" Header="Consultant Application Form">
                         <TabItem.Content>
                             <Grid >
@@ -216,7 +216,7 @@
                         </TabItem.Content>
                     </TabItem>
                     <TabItem Name="ConfidentialityAgreementForVisitor" Width="250" Header="Confidentiality Agreement">
-                        
+
                         <TabItem.Content>
 
                             <Grid>
